# kimina-lean-server

kimina-queue/: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
kimina-queue/server/: lean_client.py  lean_manager.py  main.py  models.py  queue.py  settings.py
server/: errors.py  manager.py  repl.py
tests/: test_api.py
